# versionamento-poetry2

./: README.md  pyproject.toml  teste.py
notebook/: Vendas_auto_moveis.ipynb  teste2.ipynb
